--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,22 @@
     </dependency>
   </dependencies>
 
+  <distributionManagement>
+	
+	    <repository>
+	      <id>nexus</id>
+	      <name>Jai Vardhan Nexus Release repository</name>
+	      <url>http://13.49.102.3:8081/repository/portfolio-release/</url>
+	    </repository>
+	    
+	    <snapshotRepository>
+	      <id>nexus</id>
+	      <name>Jai Vardhan Snapshot Repository</name>
+	      <url>http://13.49.102.3:8081/repository/portfolio-snapshot/</url>
+	    </snapshotRepository>
+	    
+  </distributionManagement>
+
   <build>
     <finalName>java-web-portfolio</finalName>
     <plugins>
