--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.example</groupId>
   <artifactId>java-web-portfolio</artifactId>
-  <version>1.0</version>
+  <version>1.0-SANAPSHOT</version>
   <packaging>war</packaging>
 
   <name>Java DevOps Portfolio</name>
