--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
           <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
       </plugin>
+      <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.3.2</version> 
+        </plugin>
     </plugins>
   </build>
 </project>
