--- a/pom.xml
+++ b/pom.xml
@@ -53,11 +53,11 @@
           <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
       </plugin>
-      <plugin>
+<!--       <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-war-plugin</artifactId>
             <version>3.3.2</version> 
-        </plugin>
+        </plugin> -->
     </plugins>
   </build>
 </project>
